--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,7 @@ spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 
-app.title.base=HelpPress Publisher
+app.title.default=HelpPress Publisher
 app.upload.root.path=./export/
 app.release.root.path=./release/
 app.converter.path=./sedocConverter/windows
