--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.main.allow-bean-definition-overriding=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-spring.datasource.url=jdbc:h2:file:./export/db/helppress;AUTO_SERVER=TRUE
+spring.datasource.url=jdbc:h2:file:./modules/db/helppress;AUTO_SERVER=TRUE
 spring.datasource.continue-on-error=true
 
 spring.jpa.database-platform=H2
@@ -28,4 +28,5 @@ spring.jpa.hibernate.ddl-auto=update
 app.title.default=HelpPress Publisher
 app.upload.root.path=./export/
 app.release.root.path=./release/
+app.ext.template.path=./modules/
 app.converter.path=./sedocConverter/windows
