--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-cache'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation ('org.springframework.boot:spring-boot-starter-web') {
+	  exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
+    }
+	implementation 'org.springframework.boot:spring-boot-starter-undertow:2.3.3.RELEASE'
 	implementation 'org.springframework.boot:spring-boot-starter-mustache'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.security:spring-security-crypto:5.3.3.RELEASE'
