--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,11 +14,14 @@ spring.mustache.suffix=.html
 spring.thymeleaf.suffix=.html
 
 spring.main.allow-bean-definition-overriding=true
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
 
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:file:./modules/db/helppress;AUTO_SERVER=TRUE
+spring.datasource.username=sa
+spring.datasource.password=
 spring.datasource.continue-on-error=true
+spring.h2.console.enabled=false
+#spring.h2.console.path=/h2-console
 
 spring.jpa.database-platform=H2
 spring.jpa.show-sql=true
