--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ dependencies {
 	implementation "org.apache.commons:commons-text:1.8"
 	implementation "org.jsoup:jsoup:1.13.1"
 	implementation "com.google.code.gson:gson:2.8.6"
-	implementation 'org.zeroturnaround:zt-zip:1.14'
+	//implementation 'org.zeroturnaround:zt-zip:1.14'
 	implementation 'com.itextpdf:itextpdf:5.5.13.1'
 	
 	compileOnly 'org.projectlombok:lombok:1.18.12'
