--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.devtools.livereload.enabled=true
 spring.servlet.multipart.max-file-size=200000000
 spring.servlet.multipart.max-request-size=200000000
 # ,file:templates,file:export
-spring.resources.static-locations=classpath:/static/,file:export
+spring.resources.static-locations=classpath:/static/,file:export,file:templates
 spring.mustache.expose-session-attributes=true
 spring.mustache.suffix=.html
 spring.thymeleaf.suffix=.html
