--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,8 @@ dependencies {
 	implementation 'com.squareup.okhttp3:okhttp:3.14.9'
 	implementation 'commons-io:commons-io:2.8.0'
 	implementation "com.google.code.gson:gson:2.8.6"
+	implementation 'org.json:json:20201115'
+	
 	//implementation 'org.zeroturnaround:zt-zip:1.14'
 	
 	compileOnly 'org.projectlombok:lombok:1.18.12'
